@@ -1,136 +1,128 @@
 package it.unibo.wastemaster.core.models;
 
 import it.unibo.wastemaster.core.AbstractDatabaseTest;
-
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class TripTest extends AbstractDatabaseTest {
 
-    private Trip trip;
-    private Vehicle vehicle;
-    private Employee operator;
-    private LocalDateTime departureTime;
-    private LocalDateTime expectedReturnTime;
+        private Trip trip;
+        private Vehicle vehicle;
+        private Employee operator;
+        private LocalDateTime departureTime;
+        private LocalDateTime expectedReturnTime;
 
-    @BeforeEach
-    public void setUp() {
-        super.setUp();
-        em.getTransaction().begin();
-        vehicle = new Vehicle("AB123CD", "Iveco", "Daily", 2020, Vehicle.LicenceType.C1,
-                Vehicle.VehicleStatus.IN_SERVICE);
-        operator = new Employee("John", "Doe", new Location("Via Roma", "10", "Bologna", "40100"),
-                "john.doe@example.com", "1234567890", Employee.Role.OPERATOR, Employee.LicenceType.C1);
-        departureTime = LocalDateTime.now().plusHours(1);
-        expectedReturnTime = departureTime.plusHours(5);
-    }
+        @BeforeEach
+        public void setUp() {
+                super.setUp();
+                em.getTransaction().begin();
+                vehicle = new Vehicle("AB123CD", "Iveco", "Daily", 2020,
+                                Vehicle.RequiredLicence.C1, Vehicle.VehicleStatus.IN_SERVICE, 5);
+                operator = new Employee("John", "Doe", new Location("Via Roma", "10", "Bologna", "40100"),
+                                "john.doe@example.com", "1234567890", Employee.Role.OPERATOR, Employee.Licence.C1);
+                departureTime = LocalDateTime.now().plusHours(1);
+                expectedReturnTime = departureTime.plusHours(5);
+        }
 
-    @Test
-    public void testGetterSetter() {
+        @Test
+        public void testGetterSetter() {
+                trip = new Trip("40100", vehicle, List.of(operator), departureTime, expectedReturnTime,
+                                Trip.TripStatus.PENDING, Collections.emptyList());
 
-        trip = new Trip("40100", vehicle, List.of(operator), departureTime, expectedReturnTime, Trip.TripStatus.PENDING,
-                null);
+                trip.setPostalCodes("40200");
+                assertEquals("40200", trip.getPostalCodes());
 
-        trip.setPostalCodes("40200");
-        assertEquals("40200", trip.getPostalCodes());
+                trip.setDepartureTime(departureTime);
+                assertEquals(departureTime, trip.getDepartureTime());
 
-        trip.setDepartureTime(departureTime);
-        assertEquals(departureTime, trip.getDepartureTime());
+                trip.setExpectedReturnTime(expectedReturnTime);
+                assertEquals(expectedReturnTime, trip.getExpectedReturnTime());
 
-        trip.setExpectedReturnTime(expectedReturnTime);
-        assertEquals(expectedReturnTime, trip.getExpectedReturnTime());
+                trip.setStatus(Trip.TripStatus.COMPLETED);
+                assertEquals(Trip.TripStatus.COMPLETED, trip.getStatus());
 
-        trip.setStatus(Trip.TripStatus.COMPLETED);
-        assertEquals(Trip.TripStatus.COMPLETED, trip.getStatus());
+                trip.setOperators(List.of(operator));
+                assertEquals(1, trip.getOperators().size());
+        }
 
-        trip.setOperators(List.of(operator));
-        assertEquals(1, trip.getOperators().size());
-    }
+        @Test
+        public void testToString() {
+                trip = new Trip("40100", vehicle, List.of(operator), departureTime, expectedReturnTime,
+                                Trip.TripStatus.PENDING, Collections.emptyList());
 
-    @Test
-    public void testToString() {
-        trip = new Trip("40100", vehicle, List.of(operator), departureTime, expectedReturnTime, Trip.TripStatus.PENDING,
-                null);
+                String toStringOutput = trip.toString();
 
-        String toStringOutput = trip.toString();
+                assertNotNull(toStringOutput);
+                assertTrue(toStringOutput.contains("Trip"));
+                assertTrue(toStringOutput.contains("PostalCode: 40100"));
+                assertTrue(toStringOutput.contains(vehicle.getPlate()));
+                assertTrue(toStringOutput.contains(departureTime.toString()));
+                assertTrue(toStringOutput.contains(expectedReturnTime.toString()));
+                assertTrue(toStringOutput.contains(trip.getStatus().name()));
+        }
 
-        assertNotNull(toStringOutput);
-        assertTrue(toStringOutput.contains("Trip"));
-        assertTrue(toStringOutput.contains("ID: " + trip.getTripId()));
-        assertTrue(toStringOutput.contains(trip.getPostalCodes()));
-        assertTrue(toStringOutput.contains(vehicle != null ? vehicle.getPlate() : "N/A"));
-        assertTrue(toStringOutput.contains(departureTime.toString()));
-        assertTrue(toStringOutput.contains(expectedReturnTime.toString()));
-        assertTrue(toStringOutput.contains(trip.getStatus().name()));
-    }
+        @Test
+        public void testPersistence() {
+                Employee operator1 = new Employee("John", "Doe",
+                                new Location("Via Roma", "10", "Bologna", "40100"),
+                                "john.doe@example.com", "1234567890",
+                                Employee.Role.OPERATOR, Employee.Licence.C1);
 
-    @Test
-    public void testPersistence() {
+                Employee operator2 = new Employee("Anna", "Rossi",
+                                new Location("Via Milano", "22", "Milano", "20100"),
+                                "anna.rossi@example.com", "0987654321",
+                                Employee.Role.OPERATOR, Employee.Licence.C1);
 
-        Employee operator1 = new Employee("John", "Doe",
-                new Location("Via Roma", "10", "Bologna", "40100"),
-                "john.doe@example.com", "1234567890",
-                Employee.Role.OPERATOR, Employee.LicenceType.C1);
-        Employee operator2 = new Employee("Anna", "Rossi",
-                new Location("Via Milano", "22", "Milano", "20100"),
-                "anna.rossi@example.com", "0987654321",
-                Employee.Role.OPERATOR, Employee.LicenceType.C1);
-        Employee operator3 = new Employee("Luca", "Bianchi",
-                new Location("Via Napoli", "5", "Napoli", "80100"),
-                "luca.bianchi@example.com", "1122334455",
-                Employee.Role.OPERATOR, Employee.LicenceType.C1);
-       
+                Employee operator3 = new Employee("Luca", "Bianchi",
+                                new Location("Via Napoli", "5", "Napoli", "80100"),
+                                "luca.bianchi@example.com", "1122334455",
+                                Employee.Role.OPERATOR, Employee.Licence.C1);
 
-        Customer customer1 = new Customer("Mario Rossi", null, null, null, null);
-        Customer customer2 = new Customer("Anna Bianchi", null, null, null, null);
-        
+                Customer customer1 = new Customer("Mario Rossi", null, null, null, null);
+                Customer customer2 = new Customer("Anna Bianchi", null, null, null, null);
 
-        Waste waste1 = new Waste("Organico", null, null);
-        Waste waste2 = new Waste("Carta", null, null);
-       
+                Waste waste1 = new Waste("Organico", null, null);
+                Waste waste2 = new Waste("Carta", null, null);
 
-        OneTimeSchedule oneTime1 = new OneTimeSchedule( customer1, waste1, LocalDate.now().plusDays(1));
-       
-        RecurringSchedule recurring = new RecurringSchedule(customer2, waste2, LocalDate.now(), RecurringSchedule.Frequency.WEEKLY);
-        recurring.setNextCollectionDate(LocalDate.now().plusDays(7));  
+                OneTimeSchedule oneTime1 = new OneTimeSchedule(customer1, waste1, LocalDate.now().plusDays(1));
+                RecurringSchedule recurring = new RecurringSchedule(customer2, waste2, LocalDate.now(),
+                                RecurringSchedule.Frequency.WEEKLY);
+                recurring.setNextCollectionDate(LocalDate.now().plusDays(7));
 
-        Collection collection1 = new Collection(oneTime1);
-        Collection collection2 = new Collection(recurring);
- 
-        List<Collection> collections = List.of(collection1, collection2);
+                Collection collection1 = new Collection(oneTime1);
+                Collection collection2 = new Collection(recurring);
+                List<Collection> collections = List.of(collection1, collection2);
 
+                employeeDAO.insert(operator1);
+                employeeDAO.insert(operator2);
+                employeeDAO.insert(operator3);
 
-        employeeDAO.insert(operator1);
-        employeeDAO.insert(operator2);
-        employeeDAO.insert(operator3);
+                vehicleDAO.insert(vehicle);
 
-        vehicleDAO.insert(vehicle);
-        List<Employee> operators = List.of(operator1, operator2, operator3);
+                List<Employee> operators = List.of(operator1, operator2, operator3);
 
-        Trip trip = new Trip("40100", vehicle, operators,
-                LocalDateTime.now().plusHours(1),
-                LocalDateTime.now().plusHours(5),
-                Trip.TripStatus.PENDING,collections);
+                Trip trip = new Trip("40100", vehicle, operators,
+                                LocalDateTime.now().plusHours(1),
+                                LocalDateTime.now().plusHours(5),
+                                Trip.TripStatus.PENDING, collections);
 
-        tripDAO.insert(trip);
+                tripDAO.insert(trip);
 
-        Trip found = tripDAO.findById(trip.getTripId());
-        assertNotNull(found);
+                Trip found = tripDAO.findById(trip.getTripId());
+                assertNotNull(found);
+                assertEquals(trip.getPostalCodes(), found.getPostalCodes());
 
-        int foundId = found.getTripId();
-        assertEquals(trip.getPostalCodes(), found.getPostalCodes());
-        tripDAO.delete(found);
+                int foundId = found.getTripId();
+                tripDAO.delete(found);
 
-        Trip deleted = tripDAO.findById(foundId);
-        assertNull(deleted);
-    }
-
+                Trip deleted = tripDAO.findById(foundId);
+                assertNull(deleted);
+        }
 }
